// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render properly checked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  padding-top: 1px;
}

.emotion-2 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #ffffff;
}

.emotion-3 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: #3A5DFF;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-5 {
  font-weight: 700;
  color: #ffffff;
}

.emotion-6 {
  color: #b3b3b3;
}

<div>
  <label
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <input
        className="emotion-2"
        defaultChecked={true}
        name="radio"
        onClick={[Function]}
        type="radio"
        value="radio"
      />
      <div
        className="emotion-3"
      />
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        Radio
      </div>
      <div
        className="emotion-6"
      >
        radioLegend
      </div>
    </div>
  </label>
</div>
`;

exports[`<Radio /> should render properly unchecked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  padding-top: 1px;
}

.emotion-2 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #808080;
}

.emotion-3 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: none;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-5 {
  font-weight: 700;
  color: #ffffff;
}

.emotion-6 {
  color: #b3b3b3;
}

<div>
  <label
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <input
        className="emotion-2"
        defaultChecked={false}
        name="radio"
        onClick={[Function]}
        type="radio"
        value="radio"
      />
      <div
        className="emotion-3"
      />
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        Radio
      </div>
      <div
        className="emotion-6"
      >
        radioLegend
      </div>
    </div>
  </label>
</div>
`;
